--- a/HFIX.6
+++ b/HFIX.6
@@ -3,7 +3,7 @@
 .SH NAME
 HFIX \- integrate gcc/make into my VIM/IDE to accelerate debugging
 
-.SH PATRON (see HERITAGE at bottom for more)
+.SH PATRON (see HFIX (7) HERITAGE for more information)
 hephaestus-klytotekhnes (blacksmith) olympian god of technology
 
 .SH IMAGERY
@@ -32,9 +32,35 @@ h) retrieving      pulling the scores back to host
 i) reporting       helpers for titles and legends
 
 .SH A) OVERVIEW
+HFIX is a vim add-on which uses a combination of vim-script, c-program,
+bash-script, and gcc/make to help automate my build, install, testing
+with targeted and efary to use feedback.
+
+
+HFIX∑gcc/make∑(----)∑∑chosen∑∑(w:wipe)∑=∑recon∑of∑files∑to∑be∑cleared∑∑∑∑∑∑∑∑∑∑∑(2.1a)∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑[?]
+unit∑header∑∑∑∑∑1r∑∑-∑∑∑-∑  Å main∑src∑strp∑∑15r∑∑-∑∑∑-∑  Å temp∑files∑∑∑∑∑∑5r∑∑-∑∑∑-∑  Å                                                                    [?]
+unit∑src∑∑∑∑∑∑∑13r∑∑-∑∑∑-∑  Å main∑obj∑∑∑∑∑∑∑15r∑∑-∑∑∑-∑  Å temp∑CAUTION∑∑∑∑1r∑∑-∑∑∑-∑  Å                                                                    [?]
+unit∑src∑strp∑∑13r∑∑-∑∑∑-∑  Å main∑obj∑strp∑∑15r∑∑-∑∑∑-∑  Å swap∑CAUTION∑∑∑∑2r∑∑-∑∑∑-∑  Å                                                                    [?]
+unit∑obj∑∑∑∑∑∑∑13r∑∑-∑∑∑-∑  Å main∑exec∑∑∑∑∑∑∑1r∑∑-∑∑∑-∑  Å HFIX∑working∑∑∑∑-∑∑∑-∑∑∑-∑  Å                                                                    [?]
+unit∑obj∑strp∑∑13r∑∑-∑∑∑-∑  Å main∑debug∑∑∑∑∑∑1r∑∑-∑∑∑-∑  Å HTAG∑working∑∑∑∑-∑∑∑-∑∑∑-∑  Å                                                                    [?]
+unit∑exec∑∑∑∑∑∑13r∑∑-∑∑∑-∑  Å main∑shared∑∑∑∑∑-∑∑∑-∑∑∑-∑  Å polymnia∑work∑∑∑1r∑∑-∑∑∑-∑  Å                                                                    [?]
+unit∑debug∑∑∑∑∑13r∑∑-∑∑∑-∑  Å main∑static∑∑∑∑∑-∑∑∑-∑∑∑-∑  Å fat∑fingers∑∑∑∑∑-∑∑∑-∑∑∑-∑  Å                                                                    [?]
+unit∑output∑∑∑∑∑1r∑∑-∑∑∑-∑  Å ∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑  Å ∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑∑  Å                                                                    [?]
+
+
+
+
 HFIX is two-parted, a c-language program to interpret gcc, make, and linker
 output, and vim-script for the main driver and interface with that c program,
 the Makefile, and vim itself.
 
 .SH B) DISPLAY
 
+
+.SH BUGS ============================================================================#
+HFIX is incredibly stable for me, but if anyone else used it it might explode
+and take the universe with it.
+
+.SH COLOPHON ]]======================================================================#
+this page is part of a documentation package meant to make the use of the
+heatherly tools easier and faster
